Changelog
=========


1.0.0a3 (unreleased)
--------------------

- Nothing changed yet.


1.0.0a2 (2016-09-05)
--------------------

- Implement `delete`.
  [mathias.leimgruber]


1.0.0a1 (2016-09-02)
--------------------

- Init Implementation.
  [jone & mathias.leimgruber]

- Package generated using bobtemplates.4teamwork